--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -314,7 +314,7 @@
     content: "✓";
     font-size: 10vw;
     color: #fff;
-    max-font-size: 40px;
+    font-size: 40px;
 }
 .success-message {
     font-size: 5vw;
