--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -405,3 +405,36 @@ body {
     box-shadow: rgba(0, 0, 0, 0.1);
     min-height: 200px;
 }
+
+/*Update profile*/
+.profile-form {
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    width: 300px;
+}
+.profile-form h2 {
+    margin-bottom: 20px;
+    font-size: 24px;
+    text-align: center;
+}
+.profile-form input {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 15px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+.profile-form button {
+    width: 100%;
+    padding: 10px;
+    background-color: #28a745;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+.profile-form button:hover {
+    background-color: #218838;
+}
